<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAlpha</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">cadence pushups</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cadence">  Cadence Pushups</string>
    <string name="sit">  Situp Training</string>
    <string name="run">  Runners Log</string>
    <string name="settings">  Settings</string>
    <string name="exit">  Exit</string>
    <string name="title_activity_cadence_pushups">CadencePushups</string>
    <string name="title_activity_sit_ups">SitUPS</string>
    <string name="sitT">5m, 0s</string>
    <string name="title_activity_runner_log">RunnerLog</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>

</resources>
